fix(menu): remove small top gap on menu buttons

--- a/app/sass/app.scss
+++ b/app/sass/app.scss
@@ -67,6 +67,12 @@ img {
   }
 }
 
+/**** Menu ****/
+
+.menu .waves-effect {
+  display: block;
+}
+
 /**** Override ****/
 
 .input-field .prefix {
